# monkeyinterpreter

./: README.md
go/: .gitignore  Makefile
go/src/: Makefile  README.md  go.mod  main.go
go/src/ast/: ast.go  ast_test.go
go/src/benchmark/: benchmark_test.go
go/src/compiler/: compiler.go  compiler_test.go  symbol_table.go  symbol_table_test.go
go/src/evaluator/: builtins.go  evaluator.go  evaluator_test.go  macro_expansion.go  macro_expansion_test.go
go/src/lexer/: lexer.go  lexer_test.go
go/src/monkey/: main.go
go/src/monkey/ast/: ast.go  ast_test.go  modify.go
go/src/monkey/benchmark/: benchmark_test.go
go/src/monkey/code/: code.go  code_test.go
go/src/monkey/compiler/: compiler.go  compiler_test.go  symbol_table.go  symbol_table_test.go
go/src/monkey/evaluator/: builtins.go  evaluator.go  evaluator_test.go  macro_expansion.go  (+1 more)
go/src/object/: builtins.go  environment.go  object.go
go/src/parser/: parser.go  parser_test.go
go/src/repl/: repl.go
go/src/vm/: frame.go  vm.go  vm_test.go
rust/rmonkey/: Cargo.toml  README.md
rust/rmonkey/benches/: my_benchmark.rs
rust/rmonkey/flamegraphs/: 017f0cd39f_vm-flamegraph_2021-05-03-104717.collapsed  2d595cd448_vm-flamegraph_2021-05-03-201853.collapsed  af1dadfcda_vm-flamegraph_2021-05-03-012730.collapsed
rust/rmonkey/src/: ast.rs  code.rs  environment.rs  evaluator.rs  lexer.rs  lib.rs  main.rs  object.rs  parser.rs  repl.rs  token.rs
rust/rmonkey/src/compiler/: mod.rs  symbol_table.rs
rust/rmonkey/src/object/: builtins.rs  environment.rs  mod.rs
rust/rmonkey/src/vm/: frame.rs  mod.rs
(+12 files in other folders)
