[package]
name = "rmonkey"
version = "0.1.0"
authors = ["James Abley <james.abley@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
indexmap = "1.5.1"

[dev-dependencies]
criterion = "0.3"

[lib]
bench = false

[[bin]]
name = "rmonkey"
path = "src/bin/main.rs"
bench = false

[[bench]]
name = "my_benchmark"
harness = false

[profile.release]
debug = true
